# centrix

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  REPORT_phase1.md  REPORT_phase3.md  REPORT_phase4.md  REPORT_phase5.md  pyproject.toml
dev/: tmux_up.sh
my_tools/: check_scopes.py  check_scopes_probe.py  quick_action_post.py  slack_selftest.py
runtime/: ctl.db  ctl.db-shm  ctl.db-wal  state.json
runtime/reports/: black.txt  dashboard_run.txt  diag_20251020_233337.json  diag_20251020_234028.json  diag_20251020_234034.json  healthz.json  metrics.json  mypy.txt  phase2.txt  phase3.txt  phase4.txt  phase5.txt  pip_freeze.txt  (+40 more)
systemd/: centrix-dashboard.service  centrix-tui.service  centrix-worker.service
tests/: test_alert_routing.py  test_alerts.py  test_auth.py  test_bus.py  test_cli_control.py  test_cli_multi_target.py  test_cli_status.py  test_cli_svc_slack.py  test_cli_svc_wait.py  test_control_api.py  test_dashboard_api.py  test_dashboard_healthz_up.py  test_ibkr_adapter.py  test_locks.py  test_locks_reaper.py  test_logging.py  test_logging_jsonl.py  test_metrics.py  test_order_approval.py  test_orders_ring.py  test_rbac.py  test_settings.py  test_slack_handlers.py  test_slack_selftest_stub.py  test_slack_sim_basic.py
tools/: __init__.py  bus_smoke.py  collect_centrix_diag.py  diag_dashboard.sh  env_check.py  ibkr_health.py  phase1_smoke.sh  phase2_smoke.sh  phase3_smoke.sh  phase4_smoke.sh  phase5_real_smoke.sh  phase5_smoke.sh  post_control.py  run_dashboard.py  run_slack.py  run_worker.py  slack_health.py  tmux_centrix.sh
(+34 files in other folders)
